--- a/MiniApp/src/assets/css/GlobalModule.module.scss
+++ b/MiniApp/src/assets/css/GlobalModule.module.scss
@@ -52,3 +52,33 @@
     transform-origin: -6px 0px;
     box-shadow: rgb(25 25 25 / 10%) 0px 0px 1px, rgb(25 25 25 / 20%) 0px 8px 10px -4px;
 }
+
+.about__header__container {
+    background: url(../img/About/aboutBackground.png) no-repeat;
+    border-radius: 0px 0px 24px 24px;
+    background-size: cover;
+    background-position: center;
+
+}
+
+.mascot__container {
+    display: flex;
+    background: url("../img/About/mascotBg.png") no-repeat;
+    object-fit: cover;
+    background-size: cover;
+    justify-content: center;
+    object-position: center;
+}
+
+.line__container {
+    display: flex;
+    justify-content: center;
+
+    .line {
+        width: 7rem;
+        height: 4px;
+        display: inline-flex;
+        background: #EA6C1E;
+        border-radius: 9999px;
+    }
+}
