replacing some assets and little tweak

--- a/MiniApp/src/assets/css/GlobalModule.module.scss
+++ b/MiniApp/src/assets/css/GlobalModule.module.scss
@@ -54,7 +54,7 @@
 }
 
 .about__header__container {
-    background: url(../img/About/aboutBackground.png) no-repeat;
+    background: url(../img/About/aboutBackground.webp) no-repeat;
     border-radius: 0px 0px 24px 24px;
     background-size: cover;
     background-position: center;
