Finished building partnership page

--- a/MiniApp/src/assets/css/GlobalModule.module.scss
+++ b/MiniApp/src/assets/css/GlobalModule.module.scss
@@ -85,6 +85,10 @@
 
 .partnership__header {
     grid-template-columns: 55% 45%;
+
+    @media(max-width:576px) {
+        grid-template-columns: 1fr;
+    }
 }
 
 .pokemon__card {
