Adding scroll to top after routing to another page

--- a/MiniApp/src/index.css
+++ b/MiniApp/src/index.css
@@ -17,6 +17,7 @@ body {
   font-family: 'Quicksand', sans-serif !important;
   line-height: normal;
   user-select: none;
+  scroll-behavior: smooth;
 }
 
 p {
